[gd_scene load_steps=11 format=2]

[ext_resource path="res://Imagens/cenavitoria.jpg" type="Texture" id=1]
[ext_resource path="res://cena_vitoria.gd" type="Script" id=2]
[ext_resource path="res://Sons/cena_vitoria.wav" type="AudioStream" id=3]
[ext_resource path="res://Fonts/RaviPrakash-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Imagens/pngwing.com.png" type="Texture" id=5]
[ext_resource path="res://Fonts/ubuntu/Ubuntu-BoldItalic.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.137255, 0.278431, 0.0313726, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 1, 1, 1, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Trofeu:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.0550923, 0.0564339 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.231373 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
scale = Vector2( 1.87296, 1.81288 )
script = ExtResource( 2 )

[node name="CenaFundo" type="Sprite" parent="."]
position = Vector2( 514.849, 301.048 )
scale = Vector2( 0.644368, 0.730066 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VerResultado" type="Button" parent="."]
margin_left = 47.0
margin_top = 521.0
margin_right = 195.0
margin_bottom = 569.0
text = "Ver Meu Resultado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoltarMenu" type="Button" parent="."]
margin_left = 226.58
margin_top = 521.0
margin_right = 374.58
margin_bottom = 569.0
text = "Voltar ao menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicaVitoria" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -19.602

[node name="Trofeu" type="Sprite" parent="."]
position = Vector2( 832.755, 110.066 )
scale = Vector2( 0.0965761, 0.0966784 )
texture = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0.289975 )
margin_left = 689.0
margin_top = 215.0
margin_right = 1010.0
margin_bottom = 281.0
custom_styles/normal = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Parabens voce conseguiu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Trofeu = SubResource( 3 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="rank" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 28.0
margin_right = 292.0
margin_bottom = 65.0
custom_fonts/normal_font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VerResultado" to="." method="chama_resultado"]
[connection signal="pressed" from="VoltarMenu" to="." method="voltar_para_menu"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
